@@ -6,6 +6,10 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
+import software.amazon.awssdk.core.sync.RequestBody;
+import software.amazon.awssdk.services.s3.S3Client;
+import software.amazon.awssdk.services.s3.model.GetObjectRequest;
+import software.amazon.awssdk.services.s3.model.PutObjectRequest;
 
 import java.io.File;
 import java.io.IOException;
@@ -34,6 +38,19 @@ public class MemoUserService {
     @Value("${upload.path}") // @Value : application.properties
     private String uploadPath;
 
+    /*
+    *     @Bean // 등록 시켜주겠다
+    public S3Client s3Client() {
+        return S3Client.builder()
+                .region(Region.of(region))
+                .endpointOverride(URI.create(endpoint))
+                .credentialsProvider(() -> AwsBasicCredentials.create(accessKey, secretKey))
+                .build();
+    }
+    * */
+    @Autowired
+    private S3Client s3Client;
+
     // 이미지 파일 업로드 기능이 추가된 서비스 메소드
     public MemoUserDTO createMemoUser(MemoUserDTO user, MultipartFile imageFile) throws Exception {
         if (memoUserRepository.findByLoginId(user.getLoginId()) != null) {
@@ -58,8 +75,18 @@ public class MemoUserService {
             // 시스템상의 현재 밀리초시간 : System.currentTimeMillis()
             // 확장자까지 포함된 파일 이름 : .getOriginalFilename()
             String newFileName = System.currentTimeMillis() + "-" + imageFile.getOriginalFilename();
-            File file = new File(uploadPath + "/" + newFileName); // 새롭게 만들 파일의 경로
-            imageFile.transferTo(file);
+
+            // 로컬 경로로 파일을 저장해주는 코드
+//            File file = new File(uploadPath + "/" + newFileName); // 새롭게 만들 파일의 경로
+//            imageFile.transferTo(file);
+
+            // 객체 스토리지로 저장하는 코드
+            PutObjectRequest request = PutObjectRequest.builder()
+                            .bucket("test") // 파일을 집어넣을 버킷(폴더)
+                            .key(newFileName) // 파일명
+                            .build(); // 요청을 작성 (어느 버켓에, 어떤 이름으로 저장할지)
+            // 객체 스토리지 클라이언트에게 요청과 파일(바이트)을 보내는 명령
+            s3Client.putObject(request, RequestBody.fromBytes(imageFile.getBytes()));
             user.setImage(newFileName);
         }
         return memoUserRepository.save(user);
@@ -72,8 +99,13 @@ public class MemoUserService {
     }
 
     public byte[] loadFile(String fileName) throws IOException { // fileName을 주면 upload 폴더 경로에 있는 파일을 읽어서 전달
-        Path filePath = Path.of(uploadPath + "/" + fileName); // 파일 경로
-        return Files.readAllBytes(filePath);
+//        Path filePath = Path.of(uploadPath + "/" + fileName); // 파일 경로
+//        return Files.readAllBytes(filePath);
+        GetObjectRequest request = GetObjectRequest.builder()
+                .bucket("test")
+                .key(fileName)
+                .build(); // 파일을 받아오기 위한 요청 설정
+        return s3Client.getObject(request).readAllBytes(); // 바이트 형태로 변환
     }
 
 }
